chore: update input params
